--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -103,7 +103,6 @@
     --FW_N: 400;
     --FW_B: 600;
     --FW_BB: 700;
-    --CRD_GAP: 2rem;
     --fontSizeSClamp: clamp(1.2rem, calc(1.2rem + 0.5vw), 1.8rem);
     --fontSizeMClamp: clamp(2rem, calc(1.5rem + 0.5vw), 2.2rem);
     --fontSizeXClamp: clamp(2.5rem, calc(1.5rem + 1.5vw), 4rem);
@@ -113,19 +112,13 @@
     --T_F: all 500ms ease-in-out;
     --T_M: all 750ms ease-in-out;
     --T_S: all 1000ms ease-in-out;
-    //¿PADDING
-    --P_XS: 0.25rem;
-    --P_S: 0.5rem;
-    --P_M: 1rem;
-    --P_L: 1.5rem;
-    --P_X: 2rem;
-    --P_XX: 2.5rem;
     //¿GENERAL START
     --FS: 12px;
 
     --NVH_F: 6rem;
     --NVH: 8rem;
-    --FS_NVH: calc(70rem - var(--NVH));
+    --FS_NVH: calc(100svh - var(--NVH));
+    --FS-FNVH: calc(100svh - var(--NVH_F));
 
     --titanimFont: "Titillium Web", sans-serif;
 
@@ -408,9 +401,12 @@ body {
     margin-bottom: 2rem;
     /* min-height: calc(100vh - var(--NVH_F)); */
     height: auto;
+    min-height: var(--FS-FNVH);
     @include flexDirection(column, flex-start, center);
 }
-
+.section_content {
+    width: 100%;
+}
 .hero_section {
     height: var(--FS_NVH);
 }
@@ -455,7 +451,7 @@ body {
 .sliders_container {
     position: relative;
     width: 100%;
-    height: calc(100vh - var(--NVH_F) - 8rem);
+    height: calc(100svh - var(--NVH_F) - 8rem);
     overflow: hidden;
     margin: 3rem 0 6rem;
     .slider_window_container {
@@ -1476,7 +1472,6 @@ body {
 .bullet_card {
     width: 100%;
     overflow: hidden;
-    border-radius: 1rem;
 }
 .card {
     position: relative;
@@ -1514,6 +1509,7 @@ body {
 .bullet_card {
     background: var(--NVC);
     height: 15rem;
+    border-radius: 1rem;
 }
 .bullets_container,
 .cards_container {
@@ -1521,7 +1517,6 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: var(--CRD_GAP);
     width: 100%;
     margin-bottom: 2rem;
 }
@@ -1539,10 +1534,13 @@ body {
     }
 }
 //* &SERVICE CARD - START */
-
+.bullets_container {
+    margin: 0 auto;
+    gap: 2rem;
+}
 .service_card {
     background: linear-gradient(var(--bgC), transparent, var(--bgC));
-    height: 15rem;
+    height: 20rem;
     .info_card {
         @include flexDirection(column, flex-start, center);
         background: var(--bgC_UT);
@@ -1779,7 +1777,7 @@ body {
 @media screen and (min-width: 750px) {
     .card,
     .bullet_card {
-        width: calc(50% - var(--CRD_GAP));
+        width: 50%;
     }
 
     .flex_responsive {
@@ -1809,7 +1807,7 @@ body {
 @media screen and (min-width: 1100px) {
     .card,
     .bullet_card {
-        width: calc(33.3% - var(--CRD_GAP));
+        width: 33.3%;
     }
     /* .skills_containers {
         @include flexDirection(row, center, flex-start);
@@ -1818,7 +1816,7 @@ body {
 @media screen and (min-width: 1400px) {
     .card,
     .bullet_card {
-        width: calc(25% - var(--CRD_GAP));
+        width: 25%;
     }
     /* .skills_containers {
         @include flexDirection(row, center, flex-start);
