--- a/src/css/style.css
+++ b/src/css/style.css
@@ -769,6 +769,7 @@ body P {
   position: fixed;
   left: 0;
   right: 0;
+  top: 0;
   opacity: 0;
   border-radius: 0.5rem 0.5rem 0 0;
   display: flex;
