--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -25,6 +25,11 @@
         transform: translateY(1rem);
     }
 }
+@keyframes bounceUp {
+    50% {
+        transform: translateY(-10rem);
+    }
+}
 @keyframes zoom {
     50% {
         transform: scale(1.2);
@@ -342,10 +347,15 @@ body {
     margin-bottom: 1rem;
 }
 //^ CLIENTS LOGO COLORS
-.desk_icon_svg {
+.animation_key {
+    font-weight: 600;
+    color: var(--FC);
+}
+.deskwork_icon {
     .cls-1 {
         fill: #999;
     }
+
     .cls-1,
     .cls-2,
     .cls-3,
@@ -368,119 +378,366 @@ body {
     .cls-20,
     .cls-21,
     .cls-22,
-    .cls-23 {
+    .cls-23,
+    .cls-24,
+    .cls-25,
+    .cls-26,
+    .cls-27,
+    .cls-28,
+    .cls-29,
+    .cls-30,
+    .cls-31,
+    .cls-32,
+    .cls-33,
+    .cls-34,
+    .cls-35,
+    .cls-36,
+    .cls-37,
+    .cls-38,
+    .cls-39,
+    .cls-40,
+    .cls-41,
+    .cls-42,
+    .cls-43,
+    .cls-44,
+    .cls-45,
+    .cls-46,
+    .cls-47,
+    .cls-48,
+    .cls-49,
+    .cls-50,
+    .cls-51,
+    .cls-52,
+    .cls-53,
+    .cls-54,
+    .cls-55,
+    .cls-56,
+    .cls-57 {
         stroke-width: 0px;
     }
 
     .cls-2 {
-        fill: #c99;
+        fill: #280a54;
     }
 
     .cls-3 {
-        fill: #4d4d4d;
+        fill: #c99;
     }
 
     .cls-4 {
-        fill: #666;
+        fill: #4d4d4d;
     }
 
     .cls-5 {
-        fill: #fcc;
+        fill: #666;
     }
 
     .cls-6 {
-        fill: #339;
+        fill: #fcc;
     }
 
     .cls-7 {
-        fill: #633;
+        fill: #d4643e;
     }
 
     .cls-8 {
-        fill: #c60;
+        fill: #2eef49;
     }
 
-    .cls-24 {
-        fill: none;
-        stroke: #e42320;
-        stroke-miterlimit: 10;
-        stroke-width: 4.28px;
+    .cls-9,
+    .cls-17,
+    .cls-50 {
+        fill: #0ac;
     }
 
-    .cls-10 {
-        fill: #e42320;
+    .cls-9,
+    .cls-25,
+    .cls-37,
+    .cls-42,
+    .cls-44,
+    .cls-47,
+    .cls-55,
+    .cls-56 {
+        opacity: 0.5;
+    }
+
+    .cls-10,
+    .cls-29,
+    .cls-50 {
+        opacity: 0.4;
+    }
+
+    .cls-10,
+    .cls-37 {
+        fill: #ea82f9;
     }
 
     .cls-11 {
-        fill: #930;
+        fill: #339;
     }
 
     .cls-12 {
-        fill: #600e0e;
+        fill: #633;
     }
 
-    .cls-13 {
-        fill: #39c;
+    .cls-58 {
+        stroke-width: 2px;
     }
 
-    .cls-14 {
-        fill: #333;
+    .cls-58,
+    .cls-59,
+    .cls-60,
+    .cls-61,
+    .cls-62 {
+        stroke-miterlimit: 10;
     }
 
-    .cls-15 {
-        fill: #ccc;
-    }
-
-    .cls-16 {
-        fill: #c6b198;
-    }
-
-    .cls-17 {
+    .cls-58,
+    .cls-32 {
         fill: #fff;
     }
 
+    .cls-58,
+    .cls-61,
+    .cls-62 {
+        stroke-linecap: round;
+    }
+
+    .cls-58,
+    .cls-62 {
+        stroke: gray;
+    }
+
+    .cls-13 {
+        fill: #c60;
+    }
+
+    .cls-59 {
+        stroke: #e42320;
+        stroke-width: 4.28px;
+    }
+
+    .cls-59,
+    .cls-61 {
+        fill: none;
+    }
+
+    .cls-15 {
+        fill: #e42320;
+    }
+
+    .cls-16 {
+        fill: #930;
+    }
+
     .cls-18 {
-        opacity: 0.6;
+        fill: #aef4d1;
     }
 
     .cls-19 {
-        fill: #963;
+        fill: #2b2827;
     }
 
     .cls-20 {
-        fill: #68c2e7;
+        fill: #600e0e;
     }
 
     .cls-21 {
-        fill: #336;
+        fill: #9b4ee5;
     }
 
     .cls-22 {
-        fill: #c96;
+        opacity: 0.2;
     }
 
-    .cls-sOn {
+    .cls-23,
+    .cls-29,
+    .cls-55 {
+        fill: #38166d;
+    }
+
+    .cls-24 {
+        fill: gray;
+    }
+
+    .cls-25,
+    .cls-36 {
+        fill: #6161d1;
+    }
+
+    .cls-26 {
+        fill: #333;
+    }
+
+    .cls-27 {
+        fill: #732a14;
+    }
+
+    .cls-28 {
+        fill: #ccc;
+    }
+
+    .cls-30,
+    .cls-60 {
+        fill: #494949;
+    }
+
+    .cls-31 {
+        fill: #85edb9;
+    }
+
+    .cls-63 {
+        opacity: 0.75;
+    }
+
+    .cls-33 {
+        opacity: 0.6;
+    }
+
+    .cls-34 {
+        fill: #963;
+    }
+
+    .cls-35 {
+        fill: #c49d65;
+    }
+
+    .cls-38 {
+        fill: #f7e8bc;
+    }
+
+    .cls-39 {
+        fill: #dbb579;
+    }
+
+    .cls-40 {
+        fill: #336;
+    }
+
+    .cls-41 {
+        fill: #5a5b5a;
+    }
+
+    .cls-42 {
+        fill: #f79b16;
+    }
+
+    .cls-43 {
+        fill: #a6a6a6;
+    }
+
+    .cls-44 {
+        fill: #aae8f9;
+    }
+
+    .cls-45 {
+        fill: #93d6e5;
+    }
+
+    .cls-46 {
+        fill: #222223;
+    }
+
+    .cls-47 {
+        fill: #e5c528;
+    }
+
+    .cls-48 {
+        fill: #d2dbda;
+    }
+
+    .cls-49 {
+        fill: #b3d4e5;
+    }
+
+    .cls-60 {
+        stroke: #fff;
+        stroke-width: 0.25px;
+    }
+
+    .cls-61 {
+        stroke: #280a54;
+    }
+
+    .cls-51 {
+        fill: #838483;
+    }
+
+    .cls-62 {
+        fill: #ede848;
+    }
+
+    .cls-52 {
+        fill: #eaeaea;
+    }
+
+    .cls-53 {
         fill: #9cf;
     }
-    .cls-st {
+
+    .cls-54 {
+        fill: #cecece;
+    }
+
+    .cls-56 {
+        fill: #94edad;
+    }
+
+    .cls-57 {
+        fill: #d8caa4;
+    }
+    .desk_tablet_screen {
         transition: fill 250ms ease-in-out;
         fill: rgb(3, 28, 53);
     }
-    .desk_tablet:active .cls-st,
-    .desk_tablet:hover .cls-st {
+    .desk_tablet_screen:active,
+    .desk_tablet_screen:hover {
         fill: #9cf;
     }
-    .cls-a {
+    .tablet_screen_on {
+        fill: #9cf;
+    }
+    .watch_time {
         fill: hsl(190, 100%, 40%);
     }
     .cls-txt {
         fill: var(--whiteOff);
     }
-    .desk_watch_blink {
+    .watch_num {
         animation: blink 1s 0s infinite alternate;
     }
-    .desk_me {
-        //*transform: translateX(5rem);
+    .watch_mer,
+    .icon_hide {
+        opacity: 0;
+    }
+    .icon_hide {
+        transform: translateY(4rem);
+        transition: all 1000ms ease-in-out;
+    }
+    .icon_show {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    .screen_hide {
+        opacity: 0;
+        transition: all 500ms ease;
+    }
+    .screen_show {
+        opacity: 1;
+    }
+    .desk_portfolio,
+    .desk_ball {
+        transition: all 500ms ease;
+    }
+
+    .desk_portfolio:hover {
+        transform: translateX(7rem);
+    }
+    .desk_ball {
+        margin-top: 10rem;
+    }
+    .desk_ball:hover {
+        animation: bounceUp 1000ms 250ms infinite ease-in-out;
     }
 }
 .desk_icon_container {
